[package]
name = "geo_bounding_rect_performance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geozero = { version = "0.13.0", features = ["with-wkb"] }
geo = { version = "*" }
geo-types = { version = "*" }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.38.1", features = ["full"] }
serde = "1.0.204"
serde_json = "1.0.120"
bson = "2.11.0"
